# 3-python-package-team-1

./: MANIFEST.in  Pipfile  README.md  pyproject.toml  ratpack_demo.py
.github/workflows/: build.yaml
src/ratpack/: __init__.py  infest.py
tests/: conftest.py  test_count_rats.py  test_exterminate.py  test_infest_decorator.py  test_integration.py  test_visualize_infestation.py
