[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ratpack"
description = "A rat infestation package that includes a decorator that will create rat files and burrows in the folder structure alongside other methods to remove them and count them."
version = "0.1.1"
authors = [
  { name="Foo Barstein", email="foo.barstein@onepotcooking.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/nyu-software-engineering/python-package-example"
"Repository" = "https://github.com/nyu-software-engineering/python-package-example.git"
"Bug Tracker" = "https://github.com/nyu-software-engineering/python-package-example/issues"

[project.scripts]
examplepackagefb1258 = "examplepackagefb1258.__main__:main"