[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ratpack"
description = "A rat infestation package that includes a decorator that will create rat files and burrows in the folder structure alongside other methods to remove them and count them."
version = "0.1.1"
authors = [
  { name="Foo Barstein", email="foo.barstein@onepotcooking.com" },
  { name="Helen Ho", email="hth2016@nyu.edu" },
  { name="Noah Perelmuter", email="np2446@nyu.edu" },
  { name="Apollo Wyndham", email="acw8241@nyu.edu" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-spring2025/3-python-package-team-1"
"Repository" = "https://github.com/software-students-spring2025/3-python-package-team-1.git"
"Bug Tracker" = "https://github.com/software-students-spring2025/3-python-package-team-1/issues"

[project.scripts]
examplepackagefb1258 = "examplepackagefb1258.__main__:main"